add 'refresh all' button

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -20,6 +20,11 @@ button {
 	border: none;
 	cursor: pointer;
 }
+button.all {
+	color: #999;
+	font-size: 75%;
+	vertical-align: middle;
+}
 a.picnik {
 	padding: 4px;
 	border: 1px solid #dedede;
