--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -14,6 +14,10 @@ sup {
 a {
 	text-decoration: none;
 }
+p {
+	margin: 1em 0;
+	color: #666;
+}
 
 button {
 	background: transparent;
@@ -24,23 +28,6 @@ button.all {
 	color: #999;
 	font-size: 75%;
 }
-button.picnik {
-	border: 1px solid #dedede;
-	border-top: 1px solid #eee;
-	border-left: 1px solid #eee;
-	background: #f5f5f5;
-	color: #529214;
-	font-size: 150%;
-}
-button.picnik img {
-	margin: 0 -5px -10px 0;
-}
-button.picnik:hover {
-    border: 1px solid #c6d880;
-    background: #e6efc2;
-    color: #529214;
-}
-
 
 form {
 	width: 600px;
@@ -64,18 +51,32 @@ form label {
 	clear: left;
 }
 
-p {
-	margin: 1em 0;
+form p button {
+	display: block;
+	padding: 5px;
+	margin: 5px 0;
+	border: 1px solid #cdcdcd;
+	border-top: 1px solid #ddd;
+	border-left: 1px solid #ddd;
+	background: #f5f5f5;
+	color: #529214;
+	font-size: 150%;
 }
+form p button img {
+	margin: -5px -5px -10px 0;
+}
+form p button em {
+	color: #999;
+}
+form p button:hover {
+    border: 1px solid #c6d880;
+    background: #e6efc2;
+    color: #529214;
+}
+
 #canvas {
 	width: 500px;
 	height: 500px;
-}
-#addthis {
-	color: #666;
-}
-#flickr {
-	color: #666;
 }
 #flickr a {
 	color: #0063dc;
@@ -87,6 +88,9 @@ p {
 #flickr a:hover {
 	background: #0063dc;
 	color: #fff;
+}
+#back {
+	font-weight: bold;
 }
 #github {
 	position: absolute;
