add twitter link to all pages

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -92,6 +92,10 @@ form p button:hover {
 #back {
 	font-weight: bold;
 }
+#twitter {
+	margin-top: 2.5em;
+	color: #666;
+}
 #github {
 	position: absolute;
 	top: 0;
